# Bio-OS

./: .gitignore  README.md  bio_os_engine.sln  db.sql  main.cpp  settings.gradle.kts
ai/: bio_os_action_model.pkl  bio_os_label_encoder.pkl  bio_os_tick_history.csv  predict_action.py  train_action_model.py
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/bio_os_engine/include/core/: PlantTree.hpp  SimulationState.hpp
app/src/main/cpp/bio_os_engine/include/rules/: GeneRule.hpp  RuleParser.hpp
app/src/main/cpp/bio_os_engine/src/algorithms/: WaterDistributor.cpp
app/src/main/cpp/bio_os_engine/src/api/: EngineSnapshot.cpp
app/src/main/cpp/bio_os_engine/src/core/: PlantNode.cpp  PlantTree.cpp  SimulationState.cpp  TickSystem.cpp
app/src/main/cpp/bio_os_engine/src/logs/: SimulationLogger.cpp
app/src/main/cpp/bio_os_engine/src/rules/: RuleParser.cpp
backend/.metadata/: .lock_info
backend/bio-os/: pom.xml
bio_os_engine/: bio_os_engine.vcxproj
bio_os_engine/bio_os_engine/: bio_os_engine.vcxproj.filters
gradle/wrapper/: gradle-wrapper.properties
include/algorithms/: EnergyEvaluator.hpp  GrowthStrategy.hpp  PruningStrategy.cpp  WaterDistributor.hpp
include/api/: EngineFacade.hpp  EngineNativeBridge.hpp  EngineSnapshot.hpp
include/core/: Environment.hpp  SimulationHistory.hpp
include/logs/: AlgorithmLog.hpp  SimulationLogger.hpp
include/rules/: StateTransitionEngine.hpp
src/algorithms/: EnergyEvaluator.cpp
src/core/: Environment.cpp  SimulationHistory.cpp
web/: app.js  index.html  style.css
(+80 files in other folders)
